--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
+<style>
+	body {
+	background-image: url('./images/IMG_3433.JPG')
+	}
+</style>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
