--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	  <style>
 		  h1 {
-			  background-color: lightblue
+			  background-color: lightblue;
 		  }
 	  </style>
     <meta charset="UTF-8">
