Adding background image index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	  <style>
 		  body {
 			  background-image: url('images/IMG_3433.JPG');
+			  background-position: center;
+			  text-align: center;
 		  }
 	  </style>
     <meta charset="UTF-8">
