--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	  <style>
 		  body {
 			  background-image: url('images/IMG_3433.JPG');
+			  background-repeat: no-repeat;
+			  background-attachment: fixed;
 			  background-position: center;
 			  text-align: center;
 		  }
