--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 			  background-attachment: fixed;
 			  background-position: center;
 			  background-size: cover;
+		  }
+		  h1 {
 			  text-align: center;
+			  text-color: white;
+			  padding: 10px;
 		  }
 	  </style>
     <meta charset="UTF-8">
