--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
 	  <style>
 		  body {
-			  background-image: url('images/IMG_3433.JPG');
-			  background-repeat: no-repeat;
-			  background-attachment: fixed;
-			  background-position: center;
-			  background-size: cover;
-		  }
-		  h1 {
-			  text-align: center;
-			  padding: 10px;
-		  }
+			background-image: url('images/IMG_3433.JPG');
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-position: center;
+			background-size: cover;
+		}
+		h1 {
+			color: white;
+			background-color: rgba(104, 107, 44, 0.3);
+			text-align: center;
+			padding: 10px;
+		}
 	  </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
