how ya feelin index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			background-size: cover;
 		}
 		h1 {
-			background-color: rgba(104, 107, 44, 0.3);
+			background-color: rgba(104, 107, 44, 0.6);
 			text-align: center;
 			padding: 10px;
 		}
@@ -24,7 +24,7 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>How ya feelin?</h1>  
     </main>
 	<script src="index.js"></script>
   </body>
