--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 			background-size: cover;
 		}
 		h1 {
-			background-color: rgba(104, 107, 44, 0.6);
+			color: white;
+			background-color: rgba(104, 107, 44, 0.8);
 			text-align: center;
-			padding: 10px;
+			padding: 20px;
 		}
 	  </style>
     <meta charset="UTF-8">
