--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			background-size: cover;
 		}
 		h1 {
+			width: 50%;
 			color: white;
 			background-color: rgba(104, 107, 44, 0.8);
 			text-align: center;
