--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 			background-size: cover;
 		}
 		h1 {
-			width: 50%;
 			color: white;
 			background-color: rgba(104, 107, 44, 0.8);
 			text-align: center;
 			padding: 20px;
+		}
+	        .MainStuff {
+			width: 50%;
 		}
 	  </style>
     <meta charset="UTF-8">
@@ -26,7 +28,9 @@
   </head>
   <body>
     <main>
-        <h1>How ya feelin?</h1>  
+	    <div class="MainStuff">
+		    <h1>How ya feelin?</h1>
+	    </div>
     </main>
 	<script src="index.js"></script>
   </body>
