--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		}
 	        .MainStuff {
 			width: 50%;
-			text=align: center;
+			text-align: center;
 		}
 	  </style>
     <meta charset="UTF-8">
