--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 	  <style>
 		  body {
+			  padding-top: 30px;
 			background-image: url('images/IMG_3433.JPG');
 			background-repeat: no-repeat;
 			background-attachment: fixed;
