--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		}
 		h1 {
 			color: white;
-			background-color: rgba(104, 107, 44, 0.8);
+			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+			background-color: rgba(104, 107, 44, 0.9);
 			text-align: center;
 			padding: 20px;
 		}
