--- a/index.html
+++ b/index.html
@@ -1,32 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	  <style>
-		  body {
-			  padding-top: 30px;
-			background-image: url('images/IMG_3433.JPG');
-			background-repeat: no-repeat;
-			background-attachment: fixed;
-			background-position: center;
-			background-size: cover;
-		}
-		h1 {
-			color: white;
-			font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
-			background-color: rgba(104, 107, 44, 0.9);
-			text-align: center;
-			padding: 20px;
-		}
-	        .MainStuff {
-			width: 50%;
-			margin: auto;
-		}
-	  </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
