--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	    <div class="MainStuff">
 		    <h1>How ya feelin?</h1>
 	    </div>
+	    <button class="mainbutton" type="button">Hazel's Overwhelmed</button>
     </main>
   </body>
 </html>
