--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	    <div class="MainStuff">
 		    <h1>How ya feelin?</h1>
 	    </div>
-	    <button class="mainbutton" type="button">Hazel's Overwhelmed</button>
+	    <div class="MainButton">
+	    	<button class="mainbutton" type="button">Hazel's Overwhelmed</button>
+	    </div>
     </main>
   </body>
 </html>
