--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	    <div class="MainStuff">
 		    <h1>How ya feelin?</h1>
 	    </div>
-	    <div class="MainButton">
+	    <div class="ButtonCont">
 	    	<button class="mainbutton" type="button">Hazel's Overwhelmed</button>
 	    </div>
     </main>
