--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	  <style>
 		  body {
 			  background-image: url('images/IMG_3433.JPG');
+			  padding-top: 0px;
 		  }
 	  </style>
     <meta charset="UTF-8">
