--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	  <style>
 		  body {
 			  background-image: url('images/IMG_3433.JPG');
-			  padding-top: 0px;
+			  padding: 0px;
+			  margin: 0px;
 		  }
 	  </style>
     <meta charset="UTF-8">
