--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		    <h1>How ya feelin?</h1>
 	    </div>
 	    <div class="ButtonCont">
-	    	<button class="mainbutton" type="button">Hazel's Overwhelmed</button>
+	    	<button class="mainbutton" type="button">Hazel is Overwhelmed</button>
 	    </div>
     </main>
   </body>
