--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 	    	<button class="mainbutton" type="button">Hazel is Overwhelmed</button>
 	    </div>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
