--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-	  <script>
-		  function give_help() {
-			  alert("Everthing is gonna be fine");
-		  }
-	  </script>
     <main>
 	    <div class="MainStuff">
 		    <h1>How ya feelin?</h1>
 	    </div>
 	    <div class="ButtonCont">
-	    	<button on-click="give_help()" class="mainbutton" type="button">Hazel is Overwhelmed</button>
+	    	<button on-click="alert('Everything is gonna be fine')" class="mainbutton" type="button">Hazel is Overwhelmed</button>
 	    </div>
     </main>
   </body>
