--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 		    <h1>How ya feelin?</h1>
 	    </div>
 	    <div class="ButtonCont">
-	    	<button on-click="alert('Everything is gonna be fine')" class="mainbutton" type="button">Hazel is Overwhelmed</button>
+		<script>
+			function give_help() {
+				alert("Everything is gonna be fine");
+			}
+		</script>
+	    	<button on-click="give_help()" class="mainbutton" type="button">Hazel is Overwhelmed</button>
 	    </div>
     </main>
   </body>
