--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BurnOut Protocol</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/IMG_3433.JPG" type="image/x-icon">
   </head>
   <body>
     <main>
