--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	    	<button type="button" on-click="give_help()" class="mainbutton">Hazel is Overwhelmed</button>
 	    </div>
     </main>
-    <script>
+    <script type="text/javascript">
     	function give_help() {
 		alert("Everything is gonna be fine");
 	}
