--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		    <h1>How ya feelin?</h1>
 	    </div>
 	    <div class="ButtonCont">
-	    	<button type="button" on-click="give_help()" class="mainbutton">Hazel is Overwhelmed</button>
+	    	<button type="button" onclick="give_help()" class="mainbutton">Hazel is Overwhelmed</button>
 	    </div>
     </main>
     <script type="text/javascript">
