--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	    </div>
 	    <div class="ButtonCont">
 	    	<button type="button" onclick="give_help()" class="mainbutton">Hazel is Overwhelmed</button>
+	    </div>
+	    <div class="SecButtonCont">
 		<button type="button" onclick="give_help()" class="secondbutton">Hazel is *really* Overwhelmed</button>
 	    </div>
     </main>
