--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <main>
 	    <div class="MainStuff">
-		    <h1>How ya feelin?</h1>
+		    <h1>How ya feelin'?</h1>
 	    </div>
 	    <div class="ButtonCont">
 	    	<button type="button" onclick="give_help()" class="mainbutton">Hazel is Overwhelmed</button>
