--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BurnOut Protocol</title>
+    <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/core.css" />
+    <script type="module" src="https://pyscript.net/releases/2024.1.1/core.js">
+    </script>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="icon" href="images/IMG_3433.JPG" type="image/x-icon">
   </head>
