--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 		alert(responses[index]);
 	}
     </script>
-    <script type="py" src="./main.py" config="./pyscript.json"></script>
+    <script type="py" src="assets/main.py" config="assets/pyscript.json"></script>
   </body>
 </html>
