--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     	function give_help() {
 		const responses = ["Call Josh and drive up to the mountains", "Take at least an hour to yourself (work commute doesn't count)",
 				   "Spend some time in prayer", "Go sit outside and have a banana", "Cook something delicious that you probably won't eat",
-				   "Get your heart rate up! Go play some tennis", "Go watch your favorite childhood movie", "Silence your phone, go sit in your hammock with a romance novel",
+				   "Go dominate the tennis courts", "Go watch your favorite childhood movie", "Silence your phone, go sit in your hammock with a romance novel",
 				  "Get out in nature, go for a hike", "Play your ukelele for awhile!"];
 		let index = Math.floor(Math.random() * 10);
 		alert(responses[index]);
