--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	  </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BurnOut Protocol</title>
     <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/core.css" />
