--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 		alert("HELP IS ON THE WAY")
 	}
     </script>
-    <script type="py" src="https://burnoutprotocol.azurewebsites.net/assets/main.py" config="https://burnoutprotocol.azurewebsites.net/assets/pyscript.toml"></script>
+    <script type="mpy" src="assets/main.py" config='{"packages":["smtplib", "email"]}'></script>
   </body>
 </html>
